# NetFlush

./: Cargo.toml  README.md
assets/: task_scheduler.xml
scripts/: NetCount Reset.cmd
src/: Cargo.toml  main.rs
tasks/: NetCount Reset.xml
