[package]
name = "netflush"
version = "0.1.1"
authors = ["Scott-Nx <158021536+Scott-Nx@users.noreply.github.com>"]
edition = "2024"
description = "Removing old network profile entries from the registry"
readme = "README.md"
repository = "https://github.com/Scott-Nx/NetFlush"
license = "GPL-3.0"
keywords = ["windows", "registry", "automation", "network", "task-scheduler"]
categories = ["os::windows-apis"]
exclude = ["assets"]
publish = false

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[dependencies]
winreg = "0.55"
